--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -23,6 +23,7 @@ body{
   font-size: 2.7rem;
   font-weight: 400;
   color: #41E04B;
+  margin-bottom: 10px;
 }
 
 /*---Card---*/
@@ -33,6 +34,7 @@ body{
   border-radius: 5px;
   background-color: #121212;
   box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.3);
+  border: 1px solid #888888;
 }
 
 .Card button{
@@ -57,7 +59,9 @@ body{
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-color: #ffffff;
+  background-color: #1a1a1a;
+  border: 1px solid #484848;
+  border-radius: 5px;
   padding: 0 10px;
 }
 
